--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-    background-image: url("download.jfif");
+    background-image: url("background.jpg");
     background-size: cover;
     color: red;
 }
